--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "rm -rf target; mkdir -p target; cp -r !(buildspec.yml|target) target"
   },
   "repository": {
     "type": "git",
