--- a/appspec.yml
+++ b/appspec.yml
@@ -6,9 +6,9 @@ files:
 hooks:
   BeforeInstall:
     - location: scripts/install-dependencies.sh
-      runas: ubuntu
+      runas: root
       timeout: 600
   ApplicationStart:
     - location: scripts/application-start.sh
-      runas: ubuntu
+      runas: root
       timeout: 300
