changed app start to use pm2 and added app stop

--- a/appspec.yml
+++ b/appspec.yml
@@ -7,8 +7,12 @@ hooks:
   BeforeInstall:
     - location: scripts/install-dependencies.sh
       runas: ubuntu
-      timeout: 600
+      timeout: 300
   ApplicationStart:
     - location: scripts/application-start.sh
       runas: ubuntu
-      timeout: 300
+      timeout: 60
+  ApplicationStop:
+    - location: scripts/application-stop.sh
+      runas: ubuntu
+      timeout: 60
