--- a/appspec.yml
+++ b/appspec.yml
@@ -6,11 +6,11 @@ files:
 hooks:
   BeforeInstall:
     - location: scripts/install-dependencies.sh
-      runas: ubuntu
+      runas: ec2-user
       timeout: 300
   ApplicationStart:
     - location: scripts/application-start.sh
-      runas: ubuntu
+      runas: ec2-user
       timeout: 60
   ApplicationStop:
     - location: scripts/application-stop.sh
