--- a/appspec.yml
+++ b/appspec.yml
@@ -12,3 +12,7 @@ hooks:
     - location: scripts/application-start.sh
       runas: ec2-user
       timeout: 60
+  ApplicationStop:
+    - location: scripts/application-stop.sh
+      runas: ec2-user
+      timeout: 60
